# AccessDoc

./: .env.example  .gitignore  ACCESSIBILITY.md  ACCESSIBILITY_SPEC.md  README.md  activity.json  docker-compose.yml  openapi.yaml
.claude/: settings.json  (+1 more)
backend/: Dockerfile  _inspect_form.py  _test_writer.py  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: accessibility.py  activity.py  api.py  job.py
backend/app/routers/: downloads.py  health.py  jobs.py
backend/app/services/: job_store.py  pipeline.py
backend/app/services/analysis/: gemma_client.py  hierarchy_fixer.py
backend/app/services/extraction/: ocr_runner.py  pdf_extractor.py
backend/app/services/observability/: activity_logger.py  explanations.py
backend/app/services/reporting/: narrative.py  report_builder.py
backend/app/services/validation/: issue_scanner.py  score_calculator.py  verapdf_runner.py
backend/app/utils/: file_manager.py  logging.py
backend/tests/fixtures/: generate_fixtures.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_abbreviation_expander.py  test_activity_logger.py  test_activity_rate_limit.py  test_form_tagging.py  test_gemma_client.py  test_hierarchy_fixer.py  test_issue_scanner.py  test_job_store.py  test_link_annotations.py  test_list_numbering.py  test_ocr_runner.py  test_pdf_extractor.py  test_pdf_writer.py  test_pdf_writer_phase3.py  test_report_builder.py  test_report_html.py  test_score_calculator.py  test_tables_and_lists.py  test_verapdf_runner.py
(+26 files in other folders)
